@@ -1,3 +1,6 @@
+This is the hand-created ChangeLog used prior to v1.1.3. Please refer to git
+log for changes after that.
+
 1.1.12 Sun Feb  9 04:27:38 PST 2014
 * GEARMAN_SERVERS environmental variable for libgearman to pick up servers to
 communicate with. This means that any driver now linked with libgearman will
